Removed white space and fixed alignment

--- a/assets/public/css/mailchimp-form.css
+++ b/assets/public/css/mailchimp-form.css
@@ -1,11 +1,13 @@
 /**
     Mail Chimp Subscription form CSS
      */
-
+.smf-container{
+    width: 100%;
+    background: #333;
+}
 .mailchimp_form_wrap {
     width: 75%;
     font-size: 20px;
-    background: #333;
     margin: 0 auto;
     padding: 30px;
 }
@@ -16,7 +18,7 @@
 
 .mailchimp_form_wrap .input_container {
     flex-grow: 1;
-    margin-right: 1px;
+    margin-right: 5px;
 }
 
 .mailchimp_form_wrap input,
@@ -33,6 +35,7 @@
     box-sizing: border-box;
     width:100%;
     padding: 0.5em;
+    color: #b8bcbe;
 }
 
 .mailchimp_form_wrap button {
@@ -41,7 +44,6 @@
     background: green;
     color: white;
     border: none;
-    height: 48px;
 }
 .mailchimp_form_wrap .mailchim_row {
     width: 50%;
@@ -83,9 +85,9 @@ CSS for mobile devices
  */
 @media (max-width: 576px) {
     .mailchimp_form_wrap {
-        width: 100% !important;
-        font-size: 18px !important;
-        padding: 5px !important;
+        width: 100%;
+        font-size: 18px;
+        padding: 0
     }
     .mailchimp_form_wrap .mailchim_row {
         width: 100%;
@@ -100,7 +102,7 @@ CSS for mobile devices
     }
     button#mailchimp-submit {
         margin: 0 5px;
-        width: 94%;
+        width: 95%;
     }
 
 }
